--- a/#src/scss/more.scss
+++ b/#src/scss/more.scss
@@ -1,43 +1,45 @@
 .more {
     width: 100%;
     height: 700px;
-    background-color: #000;
+    background-color: $black;
     overflow: hidden;
     padding: 100px 0;
-}
-.more__content {
-    display: flex;
-}
-.more__container-image {
-    padding-bottom: 100%;
-    background: black;
-    position: relative;
-    overflow: hidden;
-    z-index: 2;
-    background-image: url("../img/more/1.jpg");
-    background-size: cover;
-    background-position: center;
-    width: 500px;
-    height: 500px;
-}
-.more__text {
-    color: white;
-    margin: 0;
-    font-size: 64px;
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: -585%;
-    transform: translateY(-50%);
-    z-index: 1;
-    text-transform: uppercase;
-    white-space: nowrap;
-}
-.more__text.more__text-dark {
-    color: red;
-}
-.more__text span {
-    position: relative;
-    display: block;
+    &__content {
+        display: flex;
+    }
+    &__container {
+        &-image {
+            padding-bottom: 100%;
+            background: black;
+            position: relative;
+            overflow: hidden;
+            z-index: 2;
+            background-image: url("../img/more/1.jpg");
+            background-size: cover;
+            background-position: center;
+            width: 500px;
+            height: 500px;
+        }
+    }
+    &__text {
+        color: $white;
+        margin: 0;
+        font-size: 64px;
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: -585%;
+        transform: translateY(-50%);
+        z-index: 1;
+        text-transform: uppercase;
+        white-space: nowrap;
+        &-dark {
+            color: $red;
+        }
+        & span {
+            position: relative;
+            display: block;
+        }
+    }
 }
