--- a/#src/scss/more.scss
+++ b/#src/scss/more.scss
@@ -10,7 +10,7 @@
     &__container {
         &-image {
             padding-bottom: 100%;
-            background: black;
+            background: $black;
             position: relative;
             overflow: hidden;
             z-index: 2;
