--- a/#src/scss/street.scss
+++ b/#src/scss/street.scss
@@ -1,7 +1,7 @@
 .street {
     width: 100%;
     height: 3500px;
-    background: #000;
+    background: $black;
     background-size: cover;
     position: relative;
     &__bg {
@@ -19,7 +19,7 @@
             justify-content: space-between;
             padding: 0 20px;
             margin-top: 50px;
-            border-top: 1.5px solid #fff;
+            border-top: 1.5px solid $white;
         }
         &-bottom {
             position: absolute;
@@ -29,7 +29,7 @@
             justify-content: space-between;
             padding: 0 20px;
             margin-bottom: 100px;
-            border-bottom: 1.5px solid #fff;
+            border-bottom: 1.5px solid $white;
             width: 100%;
         }
     }
@@ -37,8 +37,8 @@
         width: 100%;
         list-style: none;
         height: 100px;
-        border-right: 1.5px solid #fff;
-        color: #fff;
+        border-right: 1.5px solid $white;
+        color: $white;
         &:last-child {
             border-right: 0;
         }
@@ -48,7 +48,7 @@
             align-items: center;
         }
         &-title {
-            color: red;
+            color: $red;
             font-family: "Mak";
             font-size: 28px;
             line-height: 30px;
@@ -62,7 +62,7 @@
         }
         &-font {
             & span {
-                color: #fff;
+                color: $white;
                 font-family: "Mak";
                 font-size: 18px;
                 line-height: 30px;
@@ -77,7 +77,7 @@
         }
         &-author {
             & span {
-                color: #fff;
+                color: $white;
                 font-family: "Mak";
                 font-size: 18px;
                 line-height: 30px;
@@ -92,7 +92,7 @@
         }
         &-number {
             & span {
-                color: #fff;
+                color: $white;
                 font-family: "Mak";
                 font-size: 20px;
                 line-height: 30px;
@@ -108,7 +108,7 @@
                 width: 60px;
                 height: 60px;
                 border-radius: 50%;
-                background: red;
+                background: $red;
                 margin-left: 228px;
             }
         }
@@ -171,7 +171,7 @@
             mix-blend-mode: lighten;
             z-index: 100;
             & h1 {
-                color: red;
+                color: $red;
                 text-transform: uppercase;
                 font-size: 80px;
                 margin-bottom: 0%;
@@ -203,7 +203,7 @@
             width: 900px;
             height: 200px;
             z-index: 100;
-            color: red;
+            color: $red;
             font-size: 60px;
             font-weight: 700;
         }
@@ -215,7 +215,7 @@
             height: 200px;
             z-index: 100;
             transform: rotate(28deg) !important;
-            color: red;
+            color: $red;
             font-size: 45px;
             font-weight: 700;
         }
@@ -226,7 +226,7 @@
             width: 1000px;
             height: 200px;
             z-index: 100;
-            color: red;
+            color: $red;
             font-size: 33px;
             font-weight: 700;
         }
@@ -251,7 +251,7 @@
 }
 .street__images-items::after {
     left: -3px;
-    text-shadow: -3px 0 blue;
+    text-shadow: -3px 0 $blue;
     background: black;
 }
 .street__images-items::before {
@@ -264,7 +264,7 @@
     animation: noise-anim 2s infinite linear alternate-reverse;
 }
 .street__images-container p {
-    color: grey;
+    color: $gray;
     font-family: Helvetica;
     text-transform: uppercase;
     font-size: 12px;
