--- a/#src/scss/styles.scss
+++ b/#src/scss/styles.scss
@@ -1,6 +1,6 @@
 .styles {
     overflow: hidden;
-	background-color: #000;
+	background-color: $black;
     overflow: hidden;
     padding: 7rem 0 7rem 0;
     position: relative;
@@ -16,7 +16,7 @@
 			top: 0;
 			left: 0;
 			overflow: hidden;
-			color: #fff;
+			color: $white;
 			pointer-events: none;
 			mix-blend-mode: difference;
 			& span {
@@ -45,7 +45,7 @@
 			display: inline-block;
 			cursor: none;
 			position: relative;
-			color: #fff;
+			color: $white;
 			-webkit-transition: opacity 0.4s;
 			transition: opacity 0.4s;
 			font-family: "Mak";
@@ -98,7 +98,7 @@
 	--move-initial: calc(-25% + var(--offset));
 	--move-final: calc(-50% + var(--offset));
 	font-size: 8vw;
-	border-left: 5px solid #fff;
+	border-left: 5px solid $white;
 }
 .menu__item-link:hover ~ .menu__item-container .menu__item-text {
 	-webkit-animation-play-state: running;
